Release NeoTab 1.2.0